@@ -2,7 +2,6 @@
 #define HAVE_UNISTD_H 1
 #define PQXX_HAVE_COUNT_IF 1
 #define PQXX_HAVE_IMBUE 1
-#define PQXX_HAVE_LOCALE 1
 #define PQXX_HAVE_SLEEP 1
 #define PQXX_HAVE_QUIET_NAN 1
 #define PQXX_HAVE_SYS_SELECT_H 1
