@@ -5,7 +5,6 @@
 #define PQXX_HAVE_DISTANCE 1
 #define PQXX_HAVE_GCC_VISIBILITY 1
 #define PQXX_HAVE_IMBUE 1
-#define PQXX_HAVE_LOCALE 1
 #define PQXX_HAVE_NAN 1
 #define PQXX_HAVE_POLL 1
 #define PQXX_HAVE_QUIET_NAN 1
